--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,16 @@
     ],
     "rules": {
         "no-unused-vars": 1,
-        "react/prop-types": [0]
+        "react/prop-types": [
+            0
+        ],
+        "no-use-before-define": [
+            "error",
+            {
+                "functions": false,
+                "classes": true,
+                "variables": true
+            }
+        ]
     }
 }
